--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="description">nisan's website</meta>
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="icon" href="icon.png" type="image/png">
+        <title>nisan's website</title>
     </head>
     <body>
-        <title>nisan's website</title>
         <p>all content here</p>
     </body>
 </html>
