--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description">nisan's website</meta>
-        <link rel="stylesheet" href="styles/style.css">
+        <!-- <link rel="stylesheet" href="styles/style.css"> -->
         <link rel="icon" href="icon.png" type="image/png">
         <title>nisan's website</title>
     </head>
