--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="description">nisan's website</meta>
         <!-- <link rel="stylesheet" href="styles/style.css"> -->
-        <link rel="icon" href="icon.png" type="image/png">
+        <link rel="icon" href="icon.png?v=1" type="image/png">
         <title>nisan's website</title>
     </head>
     <body>
