--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description">nisan's website</meta>
-        <!-- <link rel="stylesheet" href="styles/style.css"> -->
-        <link rel="icon" href="icon.png?v=1" type="image/png">
+        <link rel="stylesheet" href="/eater-of-lemons.github.io/styles/style.css">
+        <link rel="icon" href="/eater-of-lemons.github.io/media/icon.png" type="image/png">
         <title>nisan's website</title>
     </head>
     <body>
-        <p>all content here</p>
+        <embed src="/eater-of-lemons.github.io/media/nisan-harmanci.pdf"/>
     </body>
 </html>
